syntax = "proto3";

package kr.jclab.grpcover.sample;

option java_multiple_files = false;
option java_package = "kr.jclab.grpcover.sample";
option java_outer_classname = "SampleProto";

import "google/rpc/status.proto";

message HelloRequest {
    string message = 1;
}

message HelloReply {
    string message = 2;
}

service SampleService {
    rpc helloOnce(HelloRequest) returns (HelloReply) {}
    rpc helloMany(HelloRequest) returns (stream HelloReply) {}
}
